<?xml version="1.0"?>
<package>
  <name>auto_steering</name>
  <version>0.0.0</version>
  <description>Package for automatically steering a robot away from obstacles.</description>

  <maintainer email="sallcrof@purdue.edu">Shane</maintainer>
  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
